*Empty MediaWiki Message*

--- a/Kamena.mw
+++ b/Kamena.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry juin.jpg|thumb|250px|<font color="green">ukwezi kwa gatandatu</font>]]
  
-'''Kamena''' (izina mu [[cyongereza]]: ''June'' ; izina mu [[gifaransa]]: ''Juin'' ) cyangwa '''ukwezi kwa gatandatu, impeshyi'''
+'''Kamena''' (izina mu [[cyongereza]]: ''June'' ; izina mu [[gifaransa]]: ''Juin'' ) cyangwa '''[[ukwezi]] kwa gatandatu, impeshyi'''
 
 [[Category:Kamena| ]]
 
