--- a/Ukwakira.mw
+++ b/Ukwakira.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry octobre.jpg|thumb|250px|<font color="green">ukwezi kwa cumi</font>]]
 
-'''Ukwakira''' (izina mu [[cyongereza]]: ''October'' ; izina mu [[gifaransa]]: ''Octobre'' ) cyangwa '''ukwezi kwa cumi''' , '''ukwezi kw’icumi'''
+'''Ukwakira''' (izina mu [[cyongereza]]: ''October'' ; izina mu [[gifaransa]]: ''Octobre'' ) cyangwa '''[[ukwezi]] kwa cumi''' , '''ukwezi kw’icumi'''
 
 [[Category:Ukwakira| ]]
 
