*Empty MediaWiki Message*

--- a/Ikawa.mw
+++ b/Ikawa.mw
@@ -4,6 +4,8 @@
 
 Kunywa ikawa bigira rukuruzi yo gutera [[kanseri]] yo mu ruhago, yo mu mabere, cyangwa ibiturugunyu (''tumeur'') ni utubyimba tubanziriza kanseri.
 
+== Ikawa na Indwara ya diyabete ==
+
 [[Category:Ibinyobwa]] 
 
 [[af:Koffie]]
