--- a/Ikawa.mw
+++ b/Ikawa.mw
@@ -5,7 +5,7 @@
 Kunywa ikawa bigira rukuruzi yo gutera [[kanseri]] yo mu ruhago, yo mu mabere, cyangwa ibiturugunyu (''tumeur'') ni utubyimba tubanziriza kanseri.
 
 == Ikawa na Indwara ya diyabete ==
-N'ubwo abantu benshi usanga batinya ikawa kubera ko izamura umuvuduko w'amaraso, habayeho ubushakashatsi bwakozwe mu gihe cy'imyaka 18 ku bagore 1361 bafite imyaka iri hagati ya 39 na 65 banywaga ikawa, maze basanga 74 bararwaye indwara ya diyabete. Baje gusanga ikawa ifasha mu kwirinda diyabete kuri 45% ku banywa uturahuri (tasses) 3 cyangwa 4 ku munsi, kuri 61% abanywa uturahuri 5-6 ku munsi, naho abanywa uturahuri 7 ku munsi ikabarinda kuri 52%. Bikaba bigaragara ko abanywa uturahuri 5 cyangwa 6 aribo barindwa ku kigero cyo hejuru.
+N'ubwo abantu benshi usanga batinya ikawa kubera ko izamura umuvuduko w'amaraso, habayeho ubushakashatsi bwakozwe mu gihe cy'imyaka 18 ku bagore 1361 bafite imyaka iri hagati ya 39 na 65 banywaga ikawa, maze basanga 74 bararwaye [[indwara ya diyabete]]. Baje gusanga ikawa ifasha mu kwirinda diyabete kuri 45% ku banywa uturahuri (tasses) 3 cyangwa 4 ku munsi, kuri 61% abanywa uturahuri 5-6 ku munsi, naho abanywa uturahuri 7 ku munsi ikabarinda kuri 52%. Bikaba bigaragara ko abanywa uturahuri 5 cyangwa 6 aribo barindwa ku kigero cyo hejuru.
 
 Mu bundi bushakashatsi bwa Nurses' Health Study bwakozwe ku bantu benshi, barimo abagabo 41234 n`abagore 84200 batarwaye yaba diyabete, yaba kanseri cyangwa se n'indwara z'umutima, bagiye bareba uburyo banywamo ikawa nyuma y'imyaka ibiri na nyuma y'ine. Nyuma abarwaye diyabete bari abagabo 1333, n'abagore 4085. Aho naho bamenye ko caféine iboneka mu ikawa ifite uruhare mu kurinda indwara ya diyabete, yaba ku bagore cyangwa se no ku bagabo.
 
