*Empty MediaWiki Message*

--- a/Illuminati.mw
+++ b/Illuminati.mw
@@ -1,6 +1,6 @@
 [[File:Adam Weishaupt01.jpg|thumb|250px|<font color="grey">Adam Weishaupt</font>]]
 
-Ubundi '''Illuminati''' biva ku ijambo ry’ikilatini illuminatus bivuga ‘umurikiwe’ cyangwa ushagawe n'urumuri, illuminati rikaba riri mu bwinshi (''pluriel, plural''). Abantu bose bavuga amateka ya Illuminati bemeza ko ari agatsiko k’ibanga (''secret society'') kashinzwe na Adam Weishaupt wari umwarimu muri Kaminuza ya Ingolstadt muri Bavière (Bayer) mu Budage, hari tariki 1/5/1776. 
+Ubundi '''Illuminati''' biva ku ijambo ry’ikilatini illuminatus bivuga ‘umurikiwe’ cyangwa ushagawe n'urumuri, illuminati rikaba riri mu bwinshi (''pluriel, plural''). Abantu bose bavuga amateka ya Illuminati bemeza ko ari agatsiko k’ibanga (''secret society'') kashinzwe na Adam Weishaupt wari umwarimu muri Kaminuza ya Ingolstadt muri Bavière (Bayer) mu Budage, hari tariki [[1 Gicurasi]] [[1776]]. 
 
 Kuvuga kuri Illuminati ni ibintu bitoroshye byasaba kwandika ibitabo kandi n’ubundi byarakozwe, ndetse bimwe na bimwe twarabisomye, cyane cyane ''The 13 Satanic Bloodlines of Illuminati'' cya Fritz Springmeier na Cosmic Trigger: ''the Final Secret of The Illuminati'' cya Robert Anton. Kugirango umenye Illuminati kandi, bisaba kuba uzi ibindi bintu byinshi byerekeranye n’udutsiko tw’ibanga (''secret societies''), bityo bikaba biri bunsabe kugenda nsa nk’utandukira gato ngende mvuga kuri utwo dutsiko tundi.
 
