*Empty MediaWiki Message*

--- a/Illuminati.mw
+++ b/Illuminati.mw
@@ -11,3 +11,39 @@ Uwo mugabo yari asanzwe ari mu muryango wa ''Freemasonry'' (''Franc-maçonnerie'
 
 
 [[Category:Imiryango]]
+
+[[bn:ইলুমিনাতি]]
+[[bg:Илюминати]]
+[[ca:Illuminati]]
+[[cs:Ilumináti]]
+[[da:Illuminati (Bayern)]]
+[[de:Illuminatenorden]]
+[[et:Illuminaadid]]
+[[es:Illuminati]]
+[[eu:Illuminati]]
+[[fa:روشن‌ضمیران]]
+[[fr:Illuminés de Bavière]]
+[[gl:Illuminati]]
+[[ko:일루미나티]]
+[[hr:Iluminati]]
+[[id:Illuminati]]
+[[it:Illuminati]]
+[[he:אילומינטי]]
+[[lv:Ilumināti]]
+[[lt:Iliuminatai]]
+[[nl:Illuminati (orde)]]
+[[ja:イルミナティ]]
+[[no:Illuminatus-ordenen]]
+[[pl:Zakon iluminatów]]
+[[pt:Illuminati]]
+[[ru:Иллюминаты]]
+[[simple:Illuminati]]
+[[sl:Iluminati]]
+[[sr:Илуминати]]
+[[fi:Illuminati]]
+[[sv:Illuminati]]
+[[th:อิลลูมินาติ]]
+[[tr:İlluminati]]
+[[uk:Ілюмінати]]
+[[vi:Illuminati]]
+[[zh:光照派]]
