--- a/Illuminati.mw
+++ b/Illuminati.mw
@@ -7,6 +7,7 @@ Kuvuga kuri Illuminati ni ibintu bitoroshye byasaba kwandika ibitabo kandi n’u
 Uwo mugabo yari asanzwe ari mu muryango wa ''Freemasonry'' (''Franc-maçonnerie'') uyu ukaba ari umuryango n'ubu ukiriho, uhuza abantu batandukanye bahuriye ku ibanga ubwabo bazi bonyine, gusa ikizwi nuko badasenga Imana, ahubwo bemera uwo bita Umwubatsi Mukuru w’Isi (''Le Grand Architecte de l’univers''). Ibi abakristu bakaba babifata nko gusenga Shitani. Icyo twababwira nuko ''Freemasonry'' idashingiye ku idini, kuko habamo abakristu, abayisilamu n’abo mu yandi madini. 
 
 == Imiyoboro ==
+*[http://www.igihe.com/news-6-9-9378.html Ese koko iyi si iyoborwa na Illuminati? (Igice cya kabiri)]
 *[http://www.igihe.com/news-6-9-9224.html Ese koko iyi si iyoborwa na Illuminati? (Igice cya mbere)]
 
 
