*Empty MediaWiki Message*

--- a/Incuti_z’Isi.mw
+++ b/Incuti_z’Isi.mw
@@ -1,7 +1,7 @@
 [[File:FoE logo.png|thumb|250px|<font color="green"></font>]]
 
 
-'''Incuti z Isi''' (FOEI ; izina mu [[cyongereza]]: ''Friends of the Earth International'') ni impuzamiryango irengera ibidukikijeikaba irwanya [[ikomatanyabukungu]] ritagira imipaka kuko ubucuruzimpuzamahanga bugirwamo inyungu n’abifite, rubanda rugufi ikahagwa.
+'''Incuti z’Isi''' (FOEI ; izina mu [[cyongereza]]: ''Friends of the Earth International'') ni impuzamiryango irengera ibidukikijeikaba irwanya [[ikomatanyabukungu]] ritagira imipaka kuko ubucuruzimpuzamahanga bugirwamo inyungu n’abifite, rubanda rugufi ikahagwa.
 
 [[Category:Imiryango]]
 
