*Empty MediaWiki Message*

--- a/Abaperezida_b’Azeribayijani.mw
+++ b/Abaperezida_b’Azeribayijani.mw
@@ -1,5 +1,12 @@
-
+[[File:Coat of arms of Azerbaijan.svg|thumb|100px|<font color="grey"></font>]]
 '''Abaperezida b’[[Azeribayijani]]'''
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 {| class="wikitable"
 ! #
