*Empty MediaWiki Message*

--- a/Abaperezida_b’Azeribayijani.mw
+++ b/Abaperezida_b’Azeribayijani.mw
@@ -59,3 +59,23 @@
 |}
 
 [[Category:Abaperezida b’Azeribayijani]]
+
+[[az:Azərbaycan prezidentlərinin siyahısı]]
+[[bs:Predsjednik Azerbejdžana]]
+[[ca:President d'Azerbaidjan]]
+[[cs:Prezident Ázerbájdžánu]]
+[[en:President of Azerbaijan]]
+[[es:Anexo:Presidente de Azerbaiyán]]
+[[eo:Prezidento de Azerbajĝano]]
+[[fr:Présidents d'Azerbaïdjan]]
+[[ko:아제르바이잔의 대통령]]
+[[io:Listo di prezidisti di Azerbaijan]]
+[[id:Daftar Presiden Azerbaijan]]
+[[it:Presidenti dell'Azerbaigian]]
+[[he:נשיא אזרבייג'ן]]
+[[ka:აზერბაიჯანის პრეზიდენტი]]
+[[pl:Prezydenci Azerbejdżanu]]
+[[ru:Президент Азербайджанской республики]]
+[[tr:Azerbaycan Cumhurbaşkanları]]
+[[uk:Президенти Азербайджану]]
+[[zh:阿塞拜疆总统]]
