*Empty MediaWiki Message*

--- a/Tanzaniya.mw
+++ b/Tanzaniya.mw
@@ -18,6 +18,9 @@
 
 Tanzaniya ni igihugu muri [[Afurika]] y'iburasirazuba. Indimi nkuru za Tanzaniya ni [[igiswahiri]] n'[[icyongereza]].
 
+== ==
+*[[Abaperezida ba Tanzaniya]]
+
 [[Category:Afurika]]
 [[Category:Ibihugu]] 
 
