*Empty MediaWiki Message*

--- a/Abaperezida_ba_Tanzaniya.mw
+++ b/Abaperezida_ba_Tanzaniya.mw
@@ -41,3 +41,24 @@
 |}
 
 [[Category:Abaperezida ba Tanzaniya]]
+
+[[ca:President de Tanzània]]
+[[da:Tanzanias præsidenter]]
+[[de:Liste der Präsidenten von Tansania]]
+[[eo:Listo de prezidentoj de Tanzanio]]
+[[fr:Liste des présidents de la Tanzanie]]
+[[gl:Presidente de Tanzania]]
+[[io:Listo di prezidisti di Tanzania]]
+[[id:Daftar Presiden Tanzania]]
+[[is:Forseti Tansaníu]]
+[[ka:ტანზანიის პრეზიდენტი]]
+[[sw:Orodha ya Marais wa Tanzania]]
+[[ja:タンザニアの大統領一覧]]
+[[no:Liste over Tanzanias presidenter]]
+[[oc:Lista dels presidents de Tanzania]]
+[[pl:Prezydenci Tanzanii]]
+[[pt:Anexo:Lista de presidentes da Tanzânia]]
+[[ru:Список президентов Танзании]]
+[[sv:Lista över Tanzanias presidenter]]
+[[yo:Àkójọ àwọn Ààrẹ ilẹ̀ Tànsáníà]]
+[[zh:坦桑尼亚总统]]
