*Empty MediaWiki Message*

--- a/Tanzaniya.mw
+++ b/Tanzaniya.mw
@@ -22,7 +22,7 @@ Tanzaniya ni igihugu muri [[Afurika]] y'iburasirazuba. Indimi nkuru za Tanzaniya
 *[[Abaperezida ba Tanzaniya]]
 
 [[Category:Afurika]]
-[[Category:Ibihugu]] 
+[[Category:Tanzaniya| ]] 
 
 [[ace:Tanzania]]
 [[af:Tanzanië]]
