*Empty MediaWiki Message*

--- a/Ilham_Aliyev.mw
+++ b/Ilham_Aliyev.mw
@@ -5,3 +5,51 @@
 [[Category:Abaperezida b’Azeribayijani]]
 [[Category:Abaperezida]] 
 [[Category:Abagabo]]
+
+[[ar:إلهام علييف]]
+[[az:İlham Əliyev]]
+[[be:Ільхам Аліеў]]
+[[bg:Илхам Алиев]]
+[[cs:Ilham Alijev]]
+[[da:Ilham Aliyev]]
+[[de:İlham Əliyev]]
+[[et:İlham Əliyev]]
+[[el:Ιλχάμ Αλίγιεφ]]
+[[es:İlham Əliyev]]
+[[eo:Ilham Alijev]]
+[[fa:الهام علی‌اف]]
+[[fr:Ilham Aliev]]
+[[gl:İlham Əliyev]]
+[[gag:İlham Aliyev]]
+[[ko:일함 알리예프]]
+[[hy:Իլհամ Ալիև]]
+[[io:Ilham Aliyev]]
+[[id:Ilham Aliyev]]
+[[it:Ilham Aliyev]]
+[[he:אילהם אלייב]]
+[[ka:ილჰამ ალიევი]]
+[[ku:Ilhan Eliyev]]
+[[lbe:ИльхIам Аьлиев]]
+[[lt:Ilhamas Alijevas]]
+[[hu:İlham Əliyev]]
+[[arz:الهام علييف]]
+[[nl:İlham Əliyev]]
+[[ja:イルハム・アリエフ]]
+[[no:İlham Əliyev]]
+[[nn:İlham Əliyev]]
+[[oc:İlham Əliyev]]
+[[pl:İlham Əliyev]]
+[[pt:Ilham Aliyev]]
+[[ru:Алиев, Ильхам Гейдар оглы]]
+[[simple:Ilham Aliyev]]
+[[sk:Ilham Alijev]]
+[[sr:Илхам Алијев]]
+[[fi:İlham Əliyev]]
+[[sv:Ilham Alijev]]
+[[tt:İlham Əliyev]]
+[[tr:İlham Aliyev]]
+[[uk:Ільхам Гейдар огли Алієв]]
+[[ug:ئىلھام ئالىيېۋ]]
+[[vi:Ilham Aliyev]]
+[[yo:Ilham Aliyev]]
+[[zh:伊利哈姆·阿利耶夫]]
