*Empty MediaWiki Message*

--- a/Heydar_Aliyev.mw
+++ b/Heydar_Aliyev.mw
@@ -5,3 +5,38 @@
 [[Category:Abaperezida b’Azeribayijani]]
 [[Category:Abaperezida]] 
 [[Category:Abagabo]]
+
+[[ar:حيدر علييف]]
+[[az:Heydər Əliyev]]
+[[be:Гейдар Аліеў]]
+[[cs:Hejdar Alijev]]
+[[de:Heydər Əliyev]]
+[[et:Heydər Əliyev]]
+[[es:Heydər Əliyev]]
+[[eo:Hejdar Alijev]]
+[[fa:حیدر علی‌اف]]
+[[fr:Heydar Aliyev]]
+[[ga:Heydər Əliyev]]
+[[gl:Heydar Aliyev]]
+[[ko:헤이다르 알리예프]]
+[[hy:Հեյդար Ալիև]]
+[[io:Heydar Aliyev]]
+[[id:Heydar Aliyev]]
+[[it:Heydar Aliyev]]
+[[he:חיידר אלייב]]
+[[ka:ჰეიდარ ალიევი]]
+[[lt:Heidaras Alijevas]]
+[[ja:ヘイダル・アリエフ]]
+[[no:Heydər Əliyev]]
+[[oc:Heydər Əliyev]]
+[[pl:Heydər Əliyev]]
+[[pt:Heydar Aliyev]]
+[[ro:Heydar Aliyev]]
+[[ru:Алиев, Гейдар Алирза оглы]]
+[[sk:Hejdar Alijev]]
+[[fi:Heydər Əliyev]]
+[[sv:Gejdar Alijev]]
+[[tr:Haydar Aliyev]]
+[[uk:Алієв Гейдар]]
+[[ur:حیدر علیوف]]
+[[zh:盖达尔·阿利耶夫]]
