--- a/Heydar_Aliyev.mw
+++ b/Heydar_Aliyev.mw
@@ -1,6 +1,6 @@
 [[File:Heydar Aliyev 1997.jpg|thumb|250px|<font color="grey">Heydar Aliyev</font>]]
 
-'''Heydar Aliyev''' ([[10 Gicurasi]] [[1923]] &ndash; [[12 Ukuboza]] [[2003]]), [[Perezida]] wa [[Abaperezida b’Azeribayijani|3]] w’[[Azeribayijani]].
+'''Heydar Aliyev''' (izina mu [[kinyazeribayijani]] ''Heydər Əliyev'' ) ([[10 Gicurasi]] [[1923]] &ndash; [[12 Ukuboza]] [[2003]]), [[Perezida]] wa [[Abaperezida b’Azeribayijani|3]] w’[[Azeribayijani]].
 
 [[Category:Abaperezida b’Azeribayijani]]
 [[Category:Abaperezida]] 
