*Empty MediaWiki Message*

--- a/Julius_Nyerere.mw
+++ b/Julius_Nyerere.mw
@@ -5,3 +5,39 @@
 [[Category:Abaperezida ba Tanzaniya]]
 [[Category:Abaperezida]] 
 [[Category:Abagabo]]
+
+[[af:Julius Nyerere]]
+[[ar:جوليوس نيريري]]
+[[bg:Джулиъс Ниерере]]
+[[ca:Julius Nyerere]]
+[[cs:Julius Nyerere]]
+[[da:Julius Nyerere]]
+[[de:Julius Nyerere]]
+[[es:Julius Nyerere]]
+[[eo:Julius Nyerere]]
+[[fr:Julius Nyerere]]
+[[ko:줄리어스 니에레레]]
+[[hi:जूलियस न्येरेरे]]
+[[hr:Julius Nyerere]]
+[[io:Julius Nyerere]]
+[[it:Julius Nyerere]]
+[[he:ג'וליוס נייררה]]
+[[sw:Julius Nyerere]]
+[[hu:Julius Nyerere]]
+[[mr:ज्युलियस न्यरेरे]]
+[[nl:Julius Nyerere]]
+[[ja:ジュリウス・ニエレレ]]
+[[no:Julius Nyerere]]
+[[pl:Julius Nyerere]]
+[[pt:Julius Nyerere]]
+[[ru:Ньерере, Джулиус]]
+[[simple:Julius Nyerere]]
+[[sl:Julius Nyerere]]
+[[sr:Џулијус Њерере]]
+[[fi:Julius Nyerere]]
+[[sv:Julius Nyerere]]
+[[tr:Julius Nyerere]]
+[[uk:Джуліус Н'єрере]]
+[[vec:Julius Nyerere]]
+[[yo:Julius Nyerere]]
+[[zh:朱利叶斯·尼雷尔]]
