Jomo Kenyatta.jpg

--- a/Abaperezida_ba_Kenya.mw
+++ b/Abaperezida_ba_Kenya.mw
@@ -17,7 +17,7 @@
 |-
 | '''1'''
 |[[Jomo Kenyatta]]
-|[[File:JomoKenyatta.gif|100px]]
+|[[File:Jomo Kenyatta.jpg|100px]]
 |12 Ukuboza 1964 &ndash; 22 Kanama 1978
 |KANU
 |-
