*Empty MediaWiki Message*

--- a/Abaperezida_ba_Tanzaniya.mw
+++ b/Abaperezida_ba_Tanzaniya.mw
@@ -40,7 +40,7 @@
 |[[Chama Cha Mapinduzi]]
 |}
 
-[[Category:Abaperezida ba Tanzaniya]]
+[[Category:Abaperezida ba Tanzaniya| ]]
 
 [[ca:President de Tanzània]]
 [[da:Tanzanias præsidenter]]
