*Empty MediaWiki Message*

--- a/Ubuhinde.mw
+++ b/Ubuhinde.mw
@@ -1,4 +1,9 @@
-'''Ubuhinde'''
+[[File:Flag of India.svg|thumb|250px|<font color="grey">Adam Weishaupt</font>]]
+[[File:India (orthographic projection).svg|thumb|250px|<font color="grey">Ingagi zo mu birunga (gore) mu Rwanda</font>]]
+
+'''Ubuhinde''' (izina mu [[igihindi]]: भारत गणराज्य )
+
+== ==
 
 [[Category:Azia]]
 [[Category:Ibihugu]] 
