--- a/Ubuhinde.mw
+++ b/Ubuhinde.mw
@@ -1,5 +1,5 @@
-[[File:Flag of India.svg|thumb|250px|<font color="grey">Adam Weishaupt</font>]]
-[[File:India (orthographic projection).svg|thumb|250px|<font color="grey">Ingagi zo mu birunga (gore) mu Rwanda</font>]]
+[[File:Flag of India.svg|thumb|250px|<font color="grey">Ibendera </font>]]
+[[File:India (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita </font>]]
 
 '''Ubuhinde''' (izina mu [[igihindi]]: भारत गणराज्य )
 
