*Empty MediaWiki Message*

--- a/Iterabwoba.mw
+++ b/Iterabwoba.mw
@@ -6,3 +6,91 @@
 Intambwe ya mbere yo kurwanya iterabwoba no kurirandurana n’imizi yaryo aho ariho hose, ni ukubanza gusobanukirwa neza izi mpamvu ziritera, kugirango n’umuti uzashakwa uzabe ushingiye ku miterere nyayo y’ikibazo.
 
 [[Category:Iterabwoba| ]]
+
+[[ar:إرهاب]]
+[[an:Terrorismo]]
+[[az:Terrorizm]]
+[[zh-min-nan:Khióng-pò͘-chú-gī]]
+[[be:Тэрарызм]]
+[[be-x-old:Тэрарызм]]
+[[bs:Terorizam]]
+[[br:Sponterezh]]
+[[bg:Тероризъм]]
+[[ca:Terrorisme]]
+[[ceb:Terorismo]]
+[[cs:Terorismus]]
+[[cy:Terfysgaeth]]
+[[da:Terrorisme]]
+[[de:Terrorismus]]
+[[et:Terrorism]]
+[[el:Τρομοκρατία]]
+[[es:Terrorismo]]
+[[eo:Terorismo]]
+[[eu:Terrorismo]]
+[[fa:تروریسم]]
+[[hif:Atankwaad]]
+[[fo:Yvirgangsfólk]]
+[[fr:Terrorisme]]
+[[ga:Sceimhlitheoireacht]]
+[[gl:Terrorismo]]
+[[gu:આતંકવાદ]]
+[[ko:테러리즘]]
+[[hy:Ահաբեկչություն]]
+[[hi:आतंकवाद]]
+[[hr:Terorizam]]
+[[io:Terorismo]]
+[[id:Terorisme]]
+[[is:Hryðjuverk]]
+[[it:Terrorismo]]
+[[he:טרור]]
+[[jv:Terorisme]]
+[[kn:ಭಯೋತ್ಪಾದನೆ]]
+[[krc:Терроризм]]
+[[ka:ტერორიზმი]]
+[[sw:Ugaidi]]
+[[ku:Terorîzm]]
+[[la:Tromocratia]]
+[[lv:Terorisms]]
+[[lt:Terorizmas]]
+[[jbo:tadjycolnunte'a]]
+[[hu:Terrorizmus]]
+[[mk:Тероризам]]
+[[ml:ഭീകരവാദം]]
+[[mr:दहशतवाद]]
+[[ms:Pengganasan]]
+[[nl:Terrorisme]]
+[[new:आतङ्कवाद]]
+[[ja:テロリズム]]
+[[no:Terrorisme]]
+[[nn:Terrorisme]]
+[[oc:Terrorisme]]
+[[pnb:دہشت گردی]]
+[[nds:Terrorismus]]
+[[pl:Terroryzm]]
+[[pt:Terrorismo]]
+[[ro:Terorism]]
+[[ru:Терроризм]]
+[[sah:Терроризм]]
+[[sq:Terrorizmi]]
+[[scn:Tirrurìsimu]]
+[[simple:Terrorism]]
+[[sk:Terorizmus]]
+[[sl:Terorizem]]
+[[ckb:تیرۆریزم]]
+[[sr:Тероризам]]
+[[sh:Terorizam]]
+[[fi:Terrorismi]]
+[[sv:Terrorism]]
+[[tl:Terorismo]]
+[[ta:பயங்கரவாதம்]]
+[[te:ఉగ్రవాదం]]
+[[th:การก่อการร้าย]]
+[[tr:Terörizm]]
+[[uk:Тероризм]]
+[[ur:دہشت گردی]]
+[[vi:Khủng bố]]
+[[wa:Terorisse]]
+[[war:Terorismo]]
+[[yi:טעראריזם]]
+[[bat-smg:Teruorėzmos]]
+[[zh:恐怖主义]]
