*Empty MediaWiki Message*

--- a/Iterabwoba.mw
+++ b/Iterabwoba.mw
@@ -5,6 +5,9 @@
 
 Intambwe ya mbere yo kurwanya iterabwoba no kurirandurana n’imizi yaryo aho ariho hose, ni ukubanza gusobanukirwa neza izi mpamvu ziritera, kugirango n’umuti uzashakwa uzabe ushingiye ku miterere nyayo y’ikibazo.
 
+== Imiyoboro ==
+*[http://ijwi-islam.org/ijwi/index.php?option=com_content&view=article&id=42&Itemid=69 ijwi-islam.org]
+
 [[Category:Iterabwoba| ]]
 
 [[ar:إرهاب]]
