*Empty MediaWiki Message*

--- a/Iterabwoba.mw
+++ b/Iterabwoba.mw
@@ -5,7 +5,11 @@
 
 Intambwe ya mbere yo kurwanya iterabwoba no kurirandurana n’imizi yaryo aho ariho hose, ni ukubanza gusobanukirwa neza izi mpamvu ziritera, kugirango n’umuti uzashakwa uzabe ushingiye ku miterere nyayo y’ikibazo.
 
+== ==
+*[[Ishami ryo Kurwanya Iterabwoba]] (ATU)
+
 == Imiyoboro ==
+*[http://police.gov.rw/rw/spip.php?article50 police.gov.rw]
 *[http://ijwi-islam.org/ijwi/index.php?option=com_content&view=article&id=42&Itemid=69 ijwi-islam.org]
 
 [[Category:Iterabwoba| ]]
