--- a/Iterabwoba.mw
+++ b/Iterabwoba.mw
@@ -9,7 +9,7 @@ Intambwe ya mbere yo kurwanya iterabwoba no kurirandurana n’imizi yaryo aho ar
 *[[Ishami ryo Kurwanya Iterabwoba]] (ATU)
 
 == Imiyoboro ==
-*[http://police.gov.rw/rw/spip.php?article50 police.gov.rw]
+*[http://police.gov.rw/rw/spip.php?rubrique22 police.gov.rw]
 *[http://ijwi-islam.org/ijwi/index.php?option=com_content&view=article&id=42&Itemid=69 ijwi-islam.org]
 
 [[Category:Iterabwoba| ]]
