--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -3,6 +3,7 @@
 == A ==
 * '''AEC''' [[Umuryango w’Ubukungu bw’Afurika]] 
 *'''AMCOW''' [[Inama y’abaminisitiri b’ibihugu by’Afurika ku kibazo cy’amazi]]
+*'''ATU''' [[Ishami ryo Kurwanya Iterabwoba]] (''Anti Terrorism Unit'')
 * '''AU''' [[Umuryango w'Ubumwe bw'Afurika]]
 
 == B ==
