*Empty MediaWiki Message*

--- a/Abaperezida_ba_Turukiya.mw
+++ b/Abaperezida_ba_Turukiya.mw
@@ -36,7 +36,7 @@
 |--
 | 10 || [[Ahmet Necdet Sezer]]<br><small>(1941 &ndash;  ) || [[Image:ANSezer.jpg|60px]] || 16 Gicurasi 2000  || 28 Kanama 2007 || "judiciary"
 |-- bgcolor=#CCCCFF
-| 11 || [[Abdullah Gül]]<br><small>(1950 &ndash; ) || [[Image:11th president of turkey abdullah gul.jpg|60px]] || 28 Kanama 2007 || "Incumbent "|| [[Adalet ve Kalkınma Partisi]]
+| 11 || [[Abdullah Gül]]<br><small>(1950 &ndash; ) || [[Image:11th president of turkey abdullah gul.jpg|60px]] || 28 Kanama 2007 || "Incumbent "|| [[Ishyaka ry’Ubukiranutsi n’Amajyambere]]
 |--
 |}
 
