--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -1,6 +1,7 @@
 '''Amagambo ahinnye'''
 
 == A ==
+*'''ADF''' [[Ikigega Nyafurika Gitsura Amajyambere]]
 * '''AEC''' [[Umuryango w’Ubukungu bw’Afurika]] 
 *'''AMCOW''' [[Inama y’abaminisitiri b’ibihugu by’Afurika ku kibazo cy’amazi]]
 *'''ATU''' [[Ishami ryo Kurwanya Iterabwoba]] (''Anti Terrorism Unit'')
