--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -44,6 +44,7 @@
 * '''EICV''' Ibarura ku mibereho y’ingo
 
 == F ==
+*'''FAD''' [[Ikigega Nyafurika Gitsura Amajyambere]] ( ''Fonds Africain de Développement'' )
 * '''FOEI'''
 
 == G ==
