--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -109,6 +109,7 @@
 * '''ORTPN ''' [[Ofisi y'Igihugu y'Ubukerarugendo na Pariki]]
 
 == P ==
+*'''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]]
 * '''PRSP''' Inyandiko ikubiyemo ingamba z’igihugu zo kurwanya ubukene
 
 == R ==
