*Empty MediaWiki Message*

--- a/Ihene.mw
+++ b/Ihene.mw
@@ -2,6 +2,8 @@
 
 '''Ihene''' (izina mu [[kilatini]]  ''Capra aegagrus hircus'')
 
+== Imiyoboro ==
+*[http://rwanda.thebeehive.org/content/511/2587 Kugaburira ihene zikamwa]
 
 [[Category:Inyamabere]]
 [[Category:Ibiribwa]]
