*Empty MediaWiki Message*

--- a/Ubwonko.mw
+++ b/Ubwonko.mw
@@ -3,7 +3,7 @@
 
 '''Ubwonko''' bw’inyamaswa zikururuka (''reptiles'') buzibashisha kumenyera vuba aho zigeze n’ibihe zirimo (ni yo mpamvu muzasanga izo nyamaswa zihindagurika mu bushyuhe bw’umubiri bitewe n’uko aho ziri hashyushye cyangwa hakonje), ubw’inyamswa bita [[inyamabere]] bukazibashisha kwiyoroshya, ntizigire amahane,  ariko ubwonko bw’umuntu ni bwo bwonyine bushoboye guhimba ibishya no gukundana nyakuri.
 
-Kuva kera cyane, uruyuki rw’urunyamirimo (''l’abeille ouvrière'') rukora uruhererekane rw’ibyo rushinzwe ariko kuri gahunda zitajya zidahinduka.
+Kuva kera cyane, [[uruyuki]] rw’urunyamirimo (''l’abeille ouvrière'') rukora uruhererekane rw’ibyo rushinzwe ariko kuri gahunda zitajya zidahinduka.
 
 Mu gice cy’inyuma cy’ubwonko twagereranya n’uruhu rwabwo (''cortex cérébral'') ni ho habikwa ibyo washyize mu bwonko ngo uzabyibuke :
 
