*Empty MediaWiki Message*

--- a/Uruyuki.mw
+++ b/Uruyuki.mw
@@ -3,6 +3,8 @@
 
 '''Uruyuki''' (ubuke: '''Inzuki'''; izina mu [[kilatini]]: ''Apis'' ) ni udusimba tw’[[inigwahabiri]] tutagira amagufwa turangwa n’umubiri ugizwe n’ibice bitatu byuzuzanya aribyo; umutwe, ugaragaraho uduhembe tubiri tuzifasha guhuririza ibirukikije, amaso manini abiri azifasha kureba, n’umunwa. Mu muzinga hashobora kubamo ingabo 1500 kandi zikagaburirwa n’intazi. Akamaro kazo ni ako kwimya urwiru gusa, kandi urwimije urwiru ruhita rupfa. Ingabo ntiziryana, si byiza ko ziba nyinshi mu muzinga kuko zirya [[ubuki]] kandi zidakora. 
 
+== Imibereho y’inzuki ==
+Inzuki zibaho ari umuryango urimo inzuki za ngombwa kandi ziziranye. Ziba zikuriwe n’urwiru. Urwiru rurangwa n’ubunini bwarwo, ruba ari rwo rwonyine rw’urugore rubyara kandi rwima inshuro imwe. Rwibikamo intanga-ngabo, zizahura n’intanga-ngore rufite. Rurama imyaka ine kandi rutera amagi ibihumbi bibiri (2000) ku munsi, ntiruryana rugaburirwa n’impashyi , igikoma cy’urwiru (gelé royele). Iyo rushaje rutera amagi make bigatuma inzuki ziba nke mu muzinga, icyo gihe ruvanwa mu muzinga maze impehe zisigaye zikirerera urundi. Ni byiza kurusimbura nibura buri myaka ibiri (2) kandi bigakorwa mu gihe gitangira izuba.Urwiru rushobora kororerwa hanze y’umuzinga rukazashyirwamo nyuma. Inziru 2 ntizibana mu muzinga, zirarwana kugeza rumwe rupfuye.
 
 [[Category:Inigwahabiri]]
 
