*Empty MediaWiki Message*

--- a/Uruyuki.mw
+++ b/Uruyuki.mw
@@ -3,6 +3,33 @@
 
 '''Uruyuki''' (ubuke: '''Inzuki'''; izina mu [[kilatini]]: ''Apis'' ) ni udusimba tw’[[inigwahabiri]] tutagira amagufwa turangwa n’umubiri ugizwe n’ibice bitatu byuzuzanya aribyo; umutwe, ugaragaraho uduhembe tubiri tuzifasha guhuririza ibirukikije, amaso manini abiri azifasha kureba, n’umunwa. Mu muzinga hashobora kubamo ingabo 1500 kandi zikagaburirwa n’intazi. Akamaro kazo ni ako kwimya urwiru gusa, kandi urwimije urwiru ruhita rupfa. Ingabo ntiziryana, si byiza ko ziba nyinshi mu muzinga kuko zirya [[ubuki]] kandi zidakora. 
 
+== Amoko y’inzuki ==
+
+Amoko y’inzuki azwi cyane ni ayo mu bwoko bwa ''Apis mellifica'', ''Apis dorsata'', ''Apis florea'' na ''Apis cerana''. Cyakora inzuki zikunze gukoreshwa mu buvumvu ni izo mu bwoko bwa ''Apis mellifica'', nazo zikaba zigabanyijemo ibice byinshi, ukurikije uturere zigenda zibonekamo. Muri zo hari: 
+
+:1. ''Apis mellifica'' : ziboneka mu karere k’inyanja ya Mediterane 
+:2. ''Apis mellifica intermisa'' 
+:3. ''Apis mellifica major'' : ziboneka mu Majyaruguru ya Afurika
+:4. ''Apis mellifica sahariensis'' 
+:5. ''Apis mellifica lamarekii'' 
+:6. ''Apis mellifica nubica'' : ziboneka muri Sudani na Misiri
+:7. ''Apis mellifica scutellata'' 
+:8. ''Apis mellifica litorea'' 
+:9. ''Apis mellifica monticola'' 
+:10. ''Apis mellifica adansonii'' : ziboneka muri Afurika yo Hagati na Australia
+:11. ''Apis mellifica capensis'' 
+:12. ''Apis mellifica unicolor'' 
+:13. ''Apis mellifica jemmenitica'' 
+:14. ''Apis mellifica remipes'' 
+:15. ''Apis mellifica caucasica'' 
+:16. ''Apis mellifica taurica'' 
+:17. ''Apis mellifica cyprica'' : : ziboneka mu karere ka Irani na Mediterane 
+:18. ''Apis mellifica syriaca'' 
+:19. ''Apis mellifica carnica'' 
+:20. ''Apis mellifica linguistica''
+
+Muri izo nzuki zose, iziboneka mu [[Rwanda]] ni izitwa ''Apis mellifica adansoni'', n’ubwo nta bushakashatsi bwakozwe muri urwo rwego. Hari ubundi bwoko bw’inzuki bita mu kinyarwanda ubuhura (mellipona depressives). Izo nzuki ntizigira urubori, nta n’ubwo zubaka ibinyagu, ahubwo zishyira ubuki mu bihuku by’imiswa, mu binogo byafukutse mu biti, cyangwa mu myenge igenda isigara mu nkuta z’amazu.
+
 == Imibereho y’inzuki ==
 Inzuki zibaho ari umuryango urimo inzuki za ngombwa kandi ziziranye. Ziba zikuriwe n’urwiru. Urwiru rurangwa n’ubunini bwarwo, ruba ari rwo rwonyine rw’urugore rubyara kandi rwima inshuro imwe. Rwibikamo intanga-ngabo, zizahura n’intanga-ngore rufite. Rurama imyaka ine kandi rutera amagi ibihumbi bibiri (2000) ku munsi, ntiruryana rugaburirwa n’impashyi , igikoma cy’urwiru (gelé royele). Iyo rushaje rutera amagi make bigatuma inzuki ziba nke mu muzinga, icyo gihe ruvanwa mu muzinga maze impehe zisigaye zikirerera urundi. Ni byiza kurusimbura nibura buri myaka ibiri (2) kandi bigakorwa mu gihe gitangira izuba.Urwiru rushobora kororerwa hanze y’umuzinga rukazashyirwamo nyuma. Inziru 2 ntizibana mu muzinga, zirarwana kugeza rumwe rupfuye.
 
