--- a/Uruyuki.mw
+++ b/Uruyuki.mw
@@ -33,6 +33,9 @@ Muri izo nzuki zose, iziboneka mu [[Rwanda]] ni izitwa ''Apis mellifica adansoni
 == Imibereho y’inzuki ==
 Inzuki zibaho ari umuryango urimo inzuki za ngombwa kandi ziziranye. Ziba zikuriwe n’urwiru. Urwiru rurangwa n’ubunini bwarwo, ruba ari rwo rwonyine rw’urugore rubyara kandi rwima inshuro imwe. Rwibikamo intanga-ngabo, zizahura n’intanga-ngore rufite. Rurama imyaka ine kandi rutera amagi ibihumbi bibiri (2000) ku munsi, ntiruryana rugaburirwa n’impashyi , igikoma cy’urwiru (gelé royele). Iyo rushaje rutera amagi make bigatuma inzuki ziba nke mu muzinga, icyo gihe ruvanwa mu muzinga maze impehe zisigaye zikirerera urundi. Ni byiza kurusimbura nibura buri myaka ibiri (2) kandi bigakorwa mu gihe gitangira izuba.Urwiru rushobora kororerwa hanze y’umuzinga rukazashyirwamo nyuma. Inziru 2 ntizibana mu muzinga, zirarwana kugeza rumwe rupfuye.
 
+== Imiyoboro ==
+*[http://www.rarda.gov.rw/spip.php?article38 Imfashanyigisho ku bworozi bw’inzuki bwa kijyambere]
+
 [[Category:Inigwahabiri]]
 
 [[ang:Hunigbēo]]
