--- a/Uruyuki.mw
+++ b/Uruyuki.mw
@@ -23,7 +23,7 @@ Amoko y’inzuki azwi cyane ni ayo mu bwoko bwa ''Apis mellifica'', ''Apis dorsa
 :14. ''Apis mellifica remipes'' 
 :15. ''Apis mellifica caucasica'' 
 :16. ''Apis mellifica taurica'' 
-:17. ''Apis mellifica cyprica'' : : ziboneka mu karere ka Irani na Mediterane 
+:17. ''Apis mellifica cyprica'' : ziboneka mu karere ka Irani na Mediterane 
 :18. ''Apis mellifica syriaca'' 
 :19. ''Apis mellifica carnica'' 
 :20. ''Apis mellifica linguistica''
