/* Amateka y’ubworozi bw’inzuki */

--- a/Uruyuki.mw
+++ b/Uruyuki.mw
@@ -36,7 +36,7 @@ Inzuki zibaho ari umuryango urimo inzuki za ngombwa kandi ziziranye. Ziba zikuri
 [[File:Bienenwabe mit Eiern und Brut 5.jpg|thumb|250px|<font color="grey"></font>]]
 
 == Amateka y’ubworozi bw’inzuki ==
-Abanditsi b’ibitabo bavuga ko ubworozi bw’inzuki ari umwuga umaze igihe kinini cyane uzwi. Hari bamwe bemeza ko hashize imyaka miliyoni eshanu inzuki zibayeho ku isi, abandi bavuga ko babonye ibisigazwa by’inzuki zabayeho imyaka 3600 mbere y’ivuka rya Yezu; bamwe ndetse bemeza ko hari amoko y’inzuki yororerwaga mu Misiri imyaka 2600 mbere y’ivuka rya Yezu. Ahagana mu kinyejana cya 16 nibwo bamwe mu bagoronome Olivier w’i Sennes yatangiye kwita ku nzuki mu gitabo cye yise Theatre d’agriculture et menages des champs. Nyuma y’aho, ubworozi bw’inzuki bwafashe imyaka myinshi kugira ngo bugere uko tubuzi ubu. Muri icyo gihe Padiri mukuru w’i Carlsmark muri silesie yahimbye umutiba wa kijyambere ufite amakaderi, bashobora gukura mu mutiba bakayasubizamo nta kibazo. Cyakora uwo mutiba wagiye usubirwamo na Langstroth ariwe wahimbye umutiba wa kijyambere wanitiriwe izina rye, ubu ukaba warageze n’iwacu i Rwanda. Hari n’abandi bagize ibyo bagenda bongeraho, nk’uwitwa Dadant, Layens n’abandi.
+Abanditsi b’ibitabo bavuga ko ubworozi bw’inzuki ari umwuga umaze igihe kinini cyane uzwi. Hari bamwe bemeza ko hashize imyaka miliyoni eshanu inzuki zibayeho ku isi, abandi bavuga ko babonye ibisigazwa by’inzuki zabayeho imyaka 3600 mbere y’ivuka rya Yezu; bamwe ndetse bemeza ko hari amoko y’inzuki yororerwaga mu Misiri imyaka 2600 mbere y’ivuka rya Yezu. Ahagana mu kinyejana cya 16 nibwo bamwe mu bagoronome Olivier w’i Sennes yatangiye kwita ku nzuki mu gitabo cye yise Theatre d’agriculture et menages des champs. Nyuma y’aho, ubworozi bw’inzuki bwafashe imyaka myinshi kugira ngo bugere uko tubuzi ubu. Muri icyo gihe Padiri mukuru w’i Carlsmark muri silesie yahimbye [[umutiba]] wa kijyambere ufite amakaderi, bashobora gukura mu mutiba bakayasubizamo nta kibazo. Cyakora uwo mutiba wagiye usubirwamo na Langstroth ariwe wahimbye umutiba wa kijyambere wanitiriwe izina rye, ubu ukaba warageze n’iwacu i Rwanda. Hari n’abandi bagize ibyo bagenda bongeraho, nk’uwitwa Dadant, Layens n’abandi.
 
 == Imiyoboro ==
 *[http://www.rarda.gov.rw/spip.php?article38 Imfashanyigisho ku bworozi bw’inzuki bwa kijyambere]
