--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -50,7 +50,9 @@ Byemero &ndash;
 *Cyigenza &ndash; 
 *Cyirima &ndash; 
 *Cyimana &ndash; 
-*Cyitatire &ndash; 
+*Cyitatire &ndash;
+
+== Inyuguti D ==
 
 == Inyuguti G ==
 Gashayija (Rwagashayija) &ndash; 
