--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -54,6 +54,10 @@ Byemero &ndash;
 
 == Inyuguti D ==
 
+== Inyuguti E ==
+
+== Inyuguti F ==
+
 == Inyuguti G ==
 Gashayija (Rwagashayija) &ndash; 
 Gasindikira &ndash; 
