--- a/Amazina_nyarwanda.mw
+++ b/Amazina_nyarwanda.mw
@@ -256,6 +256,8 @@ Kirazi (m) &ndash;
 Kiroha (m) &ndash; 
 Kiromba (m) &ndash;
 
+== Inyuguti L ==
+
 == Inyuguti M ==
 Mabano (m) &ndash; 
 Mafene (m) &ndash; 
