*Empty MediaWiki Message*

--- a/Turukiya.mw
+++ b/Turukiya.mw
@@ -3,6 +3,9 @@
 
 '''Turukiya''' n’[[igihugu]] muri [[Uburayi]] na [[Aziya]].
 
+== ==
+*[[Abaperezida ba Turukiya]]
+
 [[Category:Uburayi]]
 [[Category:Aziya]]
 [[Category:Ibihugu]] 
