*Empty MediaWiki Message*

--- a/Abaperezida_ba_Turukiya.mw
+++ b/Abaperezida_ba_Turukiya.mw
@@ -11,10 +11,10 @@
 |--
 ! # 
 ! width=150|Izina<br><small>(ivuka-urupfu)
-! "Picture"
+! ifoto
 ! "Took Office"
 ! "Left Office"
-! "Party"
+! Ishyaka 
 |-- bgcolor=#FFB6B6
 | 1 || [[Mustafa Kemal Atatürk]]<br><small>(1881 &ndash; 1938) || [[Image:MustafaKemalAtaturk.jpg|60px]] || 29 Ukwakira 1923 || 10 Ugushyingo 1938 <br> || Cumhuriyet Halk Partisi
 |-- bgcolor=#FFB6B6
