*Empty MediaWiki Message*

--- a/Uruyuki.mw
+++ b/Uruyuki.mw
@@ -41,7 +41,7 @@ Abanditsi b’ibitabo bavuga ko ubworozi bw’inzuki ari umwuga umaze igihe kini
 == Imiyoboro ==
 *[http://www.rarda.gov.rw/spip.php?article38 Imfashanyigisho ku bworozi bw’inzuki bwa kijyambere]
 
-[[Category:Inigwahabiri]]
+[[Category:Inzuki]]
 
 [[ang:Hunigbēo]]
 [[ar:نحلة العسل]]
