*Empty MediaWiki Message*

--- a/Amasezerano_Mpuzamahanga_yo_Kurengera_Ibimera.mw
+++ b/Amasezerano_Mpuzamahanga_yo_Kurengera_Ibimera.mw
@@ -1,4 +1,4 @@
-'''Amasezerano Mpuzamahanga yo Kurengera Ibimera''' (AEC mu magambo ahinnye y’[[icyongereza]]; izina mu [[cyongereza]]: ''International Plant Protection Convention'' ) ni amasezerano yemejwe n’inaa y’ishami ry’umuryango w’abibumbye ryita ku buhinzi n’ibiribwa (FAO) mu nteko yayo ya 29 ugushyingo 1997, agashyirwa mu bikorwa tariki ya 02 ukwakira 2005, kandi akaba akubiyemo n’ibyahinduwe byashyizwe mu bikorwa.
+'''Amasezerano Mpuzamahanga yo Kurengera Ibimera''' (IPPC mu magambo ahinnye y’[[icyongereza]]; izina mu [[cyongereza]]: ''International Plant Protection Convention'' ) ni amasezerano yemejwe n’inaa y’ishami ry’umuryango w’abibumbye ryita ku buhinzi n’ibiribwa (FAO) mu nteko yayo ya 29 ugushyingo 1997, agashyirwa mu bikorwa tariki ya 02 ukwakira 2005, kandi akaba akubiyemo n’ibyahinduwe byashyizwe mu bikorwa.
 
 [[Category:Imiryango]] 
 
