*Empty MediaWiki Message*

--- a/Ikimera.mw
+++ b/Ikimera.mw
@@ -1,5 +1,6 @@
-[[File:Diversity of plants image version 3.png|right|thumb|250px|Ibimera]]
-'''Ibimera''' (izina mu [[kilatini]] ''Plantae'')
+[[File:Diversity of plants image version 3.png|thumb|250px|<font color="grey">Ibimera</font>]]
+
+'''Ikimera''' (izina mu [[kilatini]] ''Plantae'') ni ikimera kizima, igice cyacyo, umurama cyangwa igice gituma cyororoka,
 
 [[Category:Ibimera|Ibimera]]
 
