*Empty MediaWiki Message*

--- a/Irani.mw
+++ b/Irani.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Iran.svg|thumb|250px|<font color="grey">Ibendera ry’Irani</font>]]
 [[File:Iran (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Irani</font>]]
 
-'''Irani''' cyangwa '''Repubulika y’Ubuyisilamu ya Irani'''
+'''Irani''' cyangwa '''Repubulika y’Ubuyisilamu ya Irani''' n’[[igihugu]] muri [[Aziya]].
  
 [[Category:Ibihugu]]
 
