*Empty MediaWiki Message*

--- a/Akabambano.mw
+++ b/Akabambano.mw
@@ -14,3 +14,49 @@ Akabambano ni cyo kimenyetso cy’umukobwa w’isugi mu muco. Ni agahu koroshye 
 *irerekana aho akabambano yahoze umugore amaze kubyara.
 
 [[Category:Umuti]]
+
+[[ar:غشاء البكارة]]
+[[bn:যোনিচ্ছদ]]
+[[be:Дзявочая плява]]
+[[be-x-old:Дзявоцкая балона]]
+[[bs:Himen (biologija)]]
+[[br:Lienenn-gourzh]]
+[[bg:Химен]]
+[[cs:Panenská blána]]
+[[da:Jomfruhinde]]
+[[de:Hymen]]
+[[dv:ބިކުރުގެ ދުލިފަށް]]
+[[en:Hymen]]
+[[et:Neitsinahk]]
+[[es:Himen]]
+[[eo:Himeno]]
+[[fa:پرده بکارت]]
+[[fr:Hymen (biologie)]]
+[[ko:처녀막]]
+[[io:Himeno]]
+[[id:Selaput dara]]
+[[it:Imene (anatomia)]]
+[[he:קרום בתולים]]
+[[lt:Mergystės plėvė]]
+[[arz:هايمن]]
+[[my:အပျိုမြှေး]]
+[[nl:Maagdenvlies]]
+[[ja:処女膜]]
+[[no:Jomfruhinne]]
+[[nds:Jumfernhuut]]
+[[pl:Błona dziewicza]]
+[[pt:Hímen]]
+[[ro:Himen]]
+[[ru:Девственная плева]]
+[[simple:Hymen]]
+[[sl:Deviška kožica]]
+[[ckb:پەردەی کچێنی]]
+[[sr:Химен]]
+[[fi:Immenkalvo]]
+[[sv:Hymen]]
+[[te:కన్నెపొర]]
+[[th:เยื่อพรหมจารี]]
+[[tr:Kızlık zarı]]
+[[uk:Дівоча пліва]]
+[[vi:Màng trinh]]
+[[zh:处女膜]]
