*Empty MediaWiki Message*

--- a/Akabambano.mw
+++ b/Akabambano.mw
@@ -4,7 +4,7 @@
 
 Aya mashusho arerekana umwanya uri hagati y’imigoma mito imbere mu [[igituba]]. Kuva hejuru ku nsya ugana hasi ushobora kubona rugongo, umwenge wo kunyariramo n’umwinjiriro w’igituba.
 
-Akabambano ni cyo kimenyetso cy’umukobwa w’isugi mu muco. Ni agahu koroshye gashobora gucibwa n’imyitozo cyangwa ubwoko bw’amapamba abakobwa binjiza mu gituba ngo bifashe mu gihe cy’imihango. Kereka umukobwa yarasambanye, ubundi gucika hymen mu bundi buryo ntibyambura umukobwa ubusugi bwe.
+Akabambano ni cyo kimenyetso cy’umukobwa w’isugi mu muco. Ni agahu koroshye gashobora gucibwa n’imyitozo cyangwa ubwoko bw’amapamba abakobwa binjiza mu gituba ngo bifashe mu gihe cy’imihango. Kereka umukobwa yarasambanye, ubundi gucika akabambano mu bundi buryo ntibyambura umukobwa ubusugi bwe.
 
 == Amoko y’akabambano ==
 [[File:Hymen en.svg|thumb|250px|<font color="grey">Amoko y’akabambano</font>]]
