--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -63,6 +63,7 @@
 * '''IISD''' [[Ikigo Mpuzamahanga Giharanira Amajyambere Arambye]] (''International Institute for Sustainable Development'')
 * '''IMF''' [[Ikigega Mpuzamahanga cy’Imari]] (International Monetary Fund)
 * '''IRST''' [[Ikigo cy’Ubushakashatsi mu by’Ubumenyi n’Ikoranabuhanga]]
+*'''ISAR''' Ubushakashatsi mu buhinzi n’ubworozi (''Institut des Sciences Agronomiques du Rwanda'')
 * '''IUCN''' Abishyize Hamwe Bashinzwe Kubungabunga Isi (''International Union for Conservation of Nature'')
 
 == J ==
