*Empty MediaWiki Message*

--- a/Yoga.mw
+++ b/Yoga.mw
@@ -5,3 +5,86 @@
 Mu Rwagasabo naho ntiyahatanzwe uretse ko itaramenyekana byimazeyo. Kutamenyekana ahanini bigaragarira mu bisubizo abanyarwanda batanga iyo babajijwe icyo bazi kuri Yoga.
 
 Bamwe bagira bati: «Yoga ni nk’umikino nka za karate» abandi bati:«Itera imbaraga zirenze iza muntu bityo ikaba iri “satanique” », hari n’abavuga ko Yoga ari ukujya mu mwuka maze ntihagire ikintu na kimwe utekereza (''concentration totale'') abandi bati: «Ni idini ry’abahinde».
+
+[[af:Joga]]
+[[als:Yoga]]
+[[ar:يوجا]]
+[[an:Yoga]]
+[[az:Yoqa]]
+[[bn:যোগ (হিন্দুধর্ম)]]
+[[be-x-old:Ёга]]
+[[bo:ཡོ་ག]]
+[[bs:Joga]]
+[[br:Yoga]]
+[[bg:Йога]]
+[[ca:Ioga]]
+[[cs:Jóga]]
+[[cy:Yoga]]
+[[da:Yoga]]
+[[de:Yoga]]
+[[et:Jooga]]
+[[el:Γιόγκα]]
+[[en:Yoga]]
+[[es:Yoga]]
+[[eo:Jogo]]
+[[eu:Yoga]]
+[[fa:یوگا]]
+[[fr:Yoga]]
+[[gl:Ioga]]
+[[gu:યોગ]]
+[[ko:요가]]
+[[hy:Յոգա]]
+[[hi:योग]]
+[[hr:Joga]]
+[[id:Yoga]]
+[[ia:Yoga]]
+[[is:Jóga]]
+[[it:Yoga]]
+[[he:יוגה]]
+[[kn:ಯೋಗ]]
+[[ka:იოგა]]
+[[la:Yoga]]
+[[lv:Joga]]
+[[lt:Joga]]
+[[hu:Jóga]]
+[[mk:Јога]]
+[[ml:യോഗം]]
+[[mr:योग]]
+[[ms:Yoga]]
+[[mwl:Ioga]]
+[[nl:Yoga]]
+[[ne:योग]]
+[[new:योग]]
+[[ja:ヨーガ]]
+[[no:Yoga]]
+[[nn:Yoga]]
+[[oc:Iòga]]
+[[pnb:یوگا]]
+[[pl:Joga]]
+[[pt:Ioga]]
+[[ro:Yoga]]
+[[qu:Yoga]]
+[[ru:Йога]]
+[[sah:Йога]]
+[[sa:योग]]
+[[sq:Joga]]
+[[si:යෝග]]
+[[simple:Yoga]]
+[[sk:Joga]]
+[[sl:Joga]]
+[[sr:Joga]]
+[[sh:Joga]]
+[[fi:Jooga]]
+[[sv:Yoga]]
+[[tl:Yoga]]
+[[ta:யோகக் கலை]]
+[[te:యోగా]]
+[[tg:Йога]]
+[[tr:Yoga]]
+[[uk:Йога]]
+[[ur:یوگا]]
+[[vi:Yoga]]
+[[fiu-vro:Jooga]]
+[[war:Yoga]]
+[[yi:יאגא]]
+[[zh:瑜伽]]
