*Empty MediaWiki Message*

--- a/Yoga.mw
+++ b/Yoga.mw
@@ -1,4 +1,5 @@
 [[File:Shiva Bangalore .jpg|thumb|250px|<font color="grey">Yoga</font>]]
+[[File:Yogisculpture.JPG|thumb|250px|<font color="grey">Yoga</font>]]
 
 '''Yoga''' imaze koko kwamamara, nubwo inkomoko yayo ari mu [[Buhinde]], ntibyayibujije gushinga ibirindiro mu [[Bushinwa]], mu [[Buyapani]], [[Amerika]], mu [[Burayi]] ndetse no muri [[Afurika]].
 
