*Empty MediaWiki Message*

--- a/Yoga.mw
+++ b/Yoga.mw
@@ -7,6 +7,9 @@ Mu Rwagasabo naho ntiyahatanzwe uretse ko itaramenyekana byimazeyo. Kutamenyekan
 
 Bamwe bagira bati: «Yoga ni nk’umikino nka za karate» abandi bati:«Itera imbaraga zirenze iza muntu bityo ikaba iri “satanique” », hari n’abavuga ko Yoga ari ukujya mu mwuka maze ntihagire ikintu na kimwe utekereza (''concentration totale'') abandi bati: «Ni idini ry’abahinde».
 
+== Imiyoboro ==
+*[http://www.igihe.com/news-3-29-3036.html Ikiganiro kirambuye n'umwarimu wa Yoga mu Rwanda]
+
 [[af:Joga]]
 [[als:Yoga]]
 [[ar:يوجا]]
