*Empty MediaWiki Message*

--- a/Yoga.mw
+++ b/Yoga.mw
@@ -7,6 +7,14 @@ Mu Rwagasabo naho ntiyahatanzwe uretse ko itaramenyekana byimazeyo. Kutamenyekan
 
 Bamwe bagira bati: «Yoga ni nk’umikino nka za karate» abandi bati:«Itera imbaraga zirenze iza muntu bityo ikaba iri “satanique” », hari n’abavuga ko Yoga ari ukujya mu mwuka maze ntihagire ikintu na kimwe utekereza (''concentration totale'') abandi bati: «Ni idini ry’abahinde».
 
+Yoga ni ijambo riri mu rurimi rw’[[igisansikiriti]] rikaba rivuga “guhuza”.
+
+Guhuza “umubiri , gatekerezi na espri (''body, mind and spirit''), binyujijwe mu gusubiramo imyitozo ngororamubiri (Asanas), ndetse no kwiyinjiramo noneho umuntu akamenya ukuri kuri muri we, uwo ari we bityo akamenya n’abandi.
+
+Yoga igizwe n’imyitozo itandukanye y’umubiri, yo guhumeka, yo gutekereza ndetse n’iyo gukora no kuvuga.
+
+Yoga rero ni imyitozo ifasha umuntu mu buzima bwa buri munsi, kuko imufasha kuyobora gatekerezi ye (''mind control''). Iyo rero amaze kumenya neza gatekerezi ye, aba noneho ashobora kubaho, guhumeka, gutekereza, kuvuga, gukora no gukunda bya nyabyo.
+
 == Imiyoboro ==
 *[http://www.igihe.com/news-3-29-3036.html Ikiganiro kirambuye n'umwarimu wa Yoga mu Rwanda]
 
