*Empty MediaWiki Message*

--- a/Makadamiya.mw
+++ b/Makadamiya.mw
@@ -1,7 +1,7 @@
 [[File:Macadamia integrifolia.jpg|thumb|250px|<font color="grey">Makadamiya</font>]]
 [[File:MacNut2.JPG|thumb|250px|<font color="grey">Makadamiya</font>]]
 
-'''Makadamiya''' (izina mu [[kilatini]]: ''Macadamia'' )
+'''Makadamiya''' (izina mu [[kilatini]]: ''Macadamia'' ) ni kimwe mu bihingwa ngengabukungu byinjiza amafaranga menshi ku muhinzi wayo, ariko kikaba ari igihingwa kitagwiriye henshi muri aka karere.
 
 [[Category:Ibimera]]   
 [[Category:Ubuhinzi]]
