*Empty MediaWiki Message*

--- a/Makadamiya.mw
+++ b/Makadamiya.mw
@@ -3,5 +3,10 @@
 
 '''Makadamiya''' (izina mu [[kilatini]]: ''Macadamia'' ) ni kimwe mu bihingwa ngengabukungu byinjiza amafaranga menshi ku muhinzi wayo, ariko kikaba ari igihingwa kitagwiriye henshi muri aka karere.
 
+== Amako ya makadamiya ==
+
+== Makadamiya yera mu Rwanda ==
+
+
 [[Category:Ibimera]]   
 [[Category:Ubuhinzi]]
