--- a/Makadamiya.mw
+++ b/Makadamiya.mw
@@ -4,6 +4,11 @@
 '''Makadamiya''' (izina mu [[kilatini]]: ''Macadamia'' ) ni kimwe mu bihingwa ngengabukungu byinjiza amafaranga menshi ku muhinzi wayo, ariko kikaba ari igihingwa kitagwiriye henshi muri aka karere.
 
 == Amako ya makadamiya ==
+Dore ibitandukanya amoko ya Makadamiya ahingwa ariyo:
+
+*''Macadamiya integrifolia'' : Irangwa no kugira umusaruro mwinshi ufite amavuta ari hejuru ya 60%. Irangwa no kugira amahwa make, ariko ntibashakwihanfanira imiyaga n’indwara kubera ko ifite imizi migufi. Urubuto rwayo ni uruziga rufite umurambararo wa mm21.5-mm27.4,amashami yayo ateye nk’umutemeri.
+
+*''Macadamia tetraphyla'' : Igira umusaruro muke ufite amavuta make munsi ya 60%ahubwo ikagira isukari nyinshi. Yihanganira indwara n’umuyaga kuko ifite imizi miremire. Igira amahwa menshi ku buryo kuyikenura bigorana.
 
 == Makadamiya yera mu Rwanda ==
 
