--- a/Makadamiya.mw
+++ b/Makadamiya.mw
@@ -11,7 +11,7 @@ Dore ibitandukanya amoko ya Makadamiya ahingwa ariyo:
 *''Macadamia tetraphyla'' : Igira umusaruro muke ufite amavuta make munsi ya 60%ahubwo ikagira isukari nyinshi. Yihanganira indwara n’umuyaga kuko ifite imizi miremire. Igira amahwa menshi ku buryo kuyikenura bigorana.
 
 == Makadamiya yera mu Rwanda ==
-
+Mu [[Rwanda]] makadamiya yahageze mu ntangiriro z’umwaka w’1970 izanywe n’ikigo cy’[[ubushakashatsi mu buhinzi n’ubworozi]] (ISAR),icyo gihe bayiteye muri ISAR I Rubona n’I Karama,ariko ntiyitabwaho nk’uko bikwiriye. Mu mwaka w’1985 ubushakashatsi bwakozwe na MINAGRI bwerekanye ko makadamiya year hose mu Rwanda. Mu mwaka w’2004 MINAGRI yatangiye kuyamamaza ku biryo hagati y’imyaka ya 2005 na 2010 hatewe ingemwe ziri hagati y’ibihumbi Magana atatu (300.000 )na Miriyoni imwe n’igice (1.500.000 ). Ni ukuvuga Hegitari 2.000-10.000. 
 
 [[Category:Ibimera]]   
 [[Category:Ubuhinzi]]
