*Empty MediaWiki Message*

--- a/Makadamiya.mw
+++ b/Makadamiya.mw
@@ -17,3 +17,29 @@ Uturere tubereye makadamia mu Rwanda: Umurambi wo hagati, Umurambi w’I burasir
 
 [[Category:Ibimera]]   
 [[Category:Ubuhinzi]]
+
+[[ar:مكاداميا]]
+[[bg:Макадамия]]
+[[ca:Macadàmia]]
+[[da:Macadamia-slægten]]
+[[de:Macadamia]]
+[[en:Macadamia]]
+[[es:Macadamia]]
+[[eo:Makadamio]]
+[[eu:Macadamia]]
+[[fa:ماکادمیا]]
+[[fr:Macadamia]]
+[[haw:Makeima]]
+[[it:Macadamia]]
+[[he:מקדמיה]]
+[[nl:Macadamia]]
+[[ja:マカダミア#マカダミアナッツ]]
+[[pl:Makadamia]]
+[[pt:Macadamia]]
+[[ru:Макадамия]]
+[[simple:Macadamia nut]]
+[[fi:Australianpähkinä]]
+[[sv:Macadamiasläktet]]
+[[th:แมคาเดเมีย]]
+[[uk:Макадамія]]
+[[zh:澳大利亚坚果]]
