*Empty MediaWiki Message*

--- a/Ubushakashatsi_mu_buhinzi_n’ubworozi.mw
+++ b/Ubushakashatsi_mu_buhinzi_n’ubworozi.mw
@@ -1,6 +1,6 @@
 '''Ubushakashatsi mu buhinzi n’ubworozi''' (ISAR mu magambo ahinnye y’igifaransa; izina mu [[gifaransa]]: ''Institut des Sciences Agronomiques du Rwanda'' ; izina mu [[cyongereza]]: ''Rwanda Agricultural Research Institute'' )
 
-Ishami ry’ubushakashatsi ku mbuto ziribwa n’imboga ntiryabagaho muri ISAR mbere ya [[Jenoside yakorewe Abatutsi yo mu 1994]]. Hariho gusa imirima y’amoko anyuranye y’avoka, amacunga, makadamiya n’inanasi yari yaratewe muri sitasiyo za Rubona, Karama na Rwerere, guhera mu mwaka wa 1970.
+Ishami ry’ubushakashatsi ku mbuto ziribwa n’imboga ntiryabagaho muri ISAR mbere ya [[Jenoside yakorewe Abatutsi yo mu 1994]]. Hariho gusa imirima y’amoko anyuranye y’[[avoka]], [[amacunga]], [[makadamiya]] n’[[inanasi]] yari yaratewe muri sitasiyo za Rubona, Karama na Rwerere, guhera mu mwaka wa 1970.
 
 Ukurikije umubare munini cyane w’imbuto ziribwa n’imboga ziboneka mu Rwanda ndetse no kw’ isi hose, ubu ingufu zashyizwe mu bushakashatsi 
 
