*Empty MediaWiki Message*

--- a/Ingano.mw
+++ b/Ingano.mw
@@ -4,7 +4,7 @@
 
 Nyuma, mu myaka ya 1950 icyo gihingwa cyaje kurekwa kubera ibura ry’isoko ndetse n’amoko y’ingano atari aberanye n’u Rwanda. Ubu ingano zihingwa mu turere tw’isunzu rya Kongo-Nili, mu turere tw’amakoro ndetse no mu misozi miremire ya Buberuka ku butumburuke buri hejuru ya metero 1900. Iki gihingwa gikoreshwa mu nganda zitunganya ifu y’ingano ndetse kikaribwa nk’impeke.
 
-[[File:Tarwe korrels Triticum aestivum.jpg|left|thumb|100px|<font color="grey">Ibisimba byaduka</font>]]
+[[File:Tarwe korrels Triticum aestivum.jpg|left|thumb|150px|<font color="grey">Ingano</font>]]
 
 N’ubwo gifite akamaro kanini, ubugunduke bw’ubutaka, indwara n’ibindi byonnyi bituma umusaruro utiyongera.
 
